# open-smart-speaker

./: .editorconfig  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  settings.gradle.kts
.claude/: settings.json
.claude/agents/: improvement-planner.md  improvement-verifier.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  release.yml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/pairing/: wordlist-256.txt
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
docs/: _config.yml  architecture.md  conventions.md  e2e-testing.md  fast-paths.md  home-dashboard.md  i18n.md  index.md  latency-budgets.md  multi-room-cookbook.md  multi-room-faq.md  multi-room-protocol.md  multi-room-quickstart.md  permissions.md  privacy.md  proactive-rules.md  providers.md  random-tools.md  real-device-smoke-test.md  roadmap.md  skills-picker.md  skills.md  state-of-the-project.md  tablet-control-cookbook.md  testing-conventions.md  tools.md
gradle/: libs.versions.toml
(+1052 files in other folders)
